In our DImg, the input format is always BGRA, never grayscale or CMYK. I cannot really see if the test grayscale image in 259182 is properly color managed, but I hope lcms is clever enough to handle applying a grayscale profile on an BGRA image.

BUG: 259182

svn path=/branches/extragear/graphics/digikam/core/; revision=1206683